# iwikMetodyka

./: CMakeLists.txt
tests/: dummy.cpp  splitArrayEvenAndOdd.cpp
